# An-Introduction-to-Using-CMake

./: README.md
Part1/: CMakeLists.txt  hello_world.c
Part2/: CMakeLists.txt  part2.c
Part3/: CMakeLists.txt  FindNetCDF.cmake  part3.c
